# nsfw-shorier_comfyui

./: README.md  README_ภาษาไทย.md  README_日本語.md  __init__.py  compvis.py  faumg.py  jie2dian3.py  nfau.py  notai.py  pyproject.toml  requirements.txt  shori.py
.github/workflows/: publish.yml
web/: load_workflow.js
