[project]
name = "nsfw-shorier_comfyui"
description = "Performs various processing on images containing NSFW content within ComfyUI. The model used for detecting NSFW content can be selected."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["transformers", "pillow"]

[project.urls]
Repository = "https://github.com/phyblas/nsfw-shorier_comfyui"

[tool.comfy]
PublisherId = "phyblas"
DisplayName = "nsfw-shorier_comfyui"
Icon = "https://raw.githubusercontent.com/phyblas/nsfw-shorier_comfyui/refs/heads/main/img/nsfw-chan-icon.jpg"