[project]
name = "nsfw-shorier_comfyui"
description = "Performs various processing on images containing NSFW content within ComfyUI. The model used for detecting NSFW content can be selected: [compvis, falconsai, adamcodd, umairrkhn, marqo, gantman, nudenet]"
version = "1.3.0"
license = {file = "LICENSE"}
dependencies = ["onnxruntime", "pillow", "timm", "transformers"]

[project.urls]
Repository = "https://github.com/phyblas/nsfw-shorier_comfyui"

[tool.comfy]
PublisherId = "phyblas"
DisplayName = "nsfw-shorier_comfyui"
Icon = "https://raw.githubusercontent.com/phyblas/nsfw-shorier_comfyui/refs/heads/main/img/nsfw-chan-icon.jpg"